--- a/css/styles.css
+++ b/css/styles.css
@@ -13,17 +13,33 @@ html {
 *::after {
   -webkit-box-sizing: inherit;
           box-sizing: inherit;
-  margin: inherit;
-  padding: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 img {
   display: block;
 }
 
-a,
+li {
+  list-style-type: none;
+}
+
+ul,
+p,
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
 button {
   font-family: "Ubuntu", Arial, Helvetica, sans-serif;
+  font-size: 1rem;
 }
 
 h1,
@@ -32,15 +48,105 @@ h3 {
   font-family: "Overpass", Arial, Helvetica, sans-serif;
 }
 
-button {
-  font-family: "Overpass", Arial, Helvetica, sans-serif;
-}
-
 body {
   font-size: 1rem;
   font-family: "Overpass", Arial, Helvetica, sans-serif;
   min-height: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, from(#2c2d3f), to(#3f4164)) no-repeat;
-  background: linear-gradient(#2c2d3f, #3f4164) no-repeat;
+}
+
+.intro--container {
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 143, 112, 0.9)), to(rgba(255, 61, 84, 0.9))), url("../images/bg-pattern-intro.svg");
+  background-image: linear-gradient(to right, rgba(255, 143, 112, 0.9), rgba(255, 61, 84, 0.9)), url("../images/bg-pattern-intro.svg");
+  background-repeat: no-repeat;
+  background-position: center, 25% 51%;
+  height: 550px;
+  border-radius: 0 0 0 75px;
+}
+
+.header {
+  padding: 3em 2em 2em 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.header .nav {
+  max-width: 1100px;
+  width: 100%;
+}
+
+.header .nav .menu--wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header .nav .menu--wrap .logo {
+  width: 101px;
+  height: 40px;
+}
+
+.header .nav .menu--wrap #hamburger--btn {
+  display: none;
+}
+
+.header .nav .menu--wrap .menu--container {
+  margin-left: 2.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header .nav .menu--wrap .menu--container .menu-buttons--wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li {
+  padding: 0.5em 1em 0.5em 0;
+  position: relative;
+}
+
+.header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li + .menu__li {
+  margin-left: 1em;
+}
+
+.header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  text-align: start;
+  color: white;
+  font-weight: 500;
+}
+
+.header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button::after {
+  content: url("../images/icon-arrow-light.svg");
+  position: absolute;
+  right: 2px;
+}
+
+.header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .dropdown-content {
+  display: none;
+}
+
+.header .nav .menu--wrap .menu--container .login--wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 /*# sourceMappingURL=styles.css.map */
