--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ h3 {
 
 a {
   text-decoration: none;
+  font-weight: 600;
 }
 
 button {
@@ -117,15 +118,18 @@ body {
 }
 
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li {
-  padding: 0.5em 1em 0.5em 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: relative;
 }
 
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li + .menu__li {
-  margin-left: 1em;
+  margin-left: 2em;
 }
 
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button {
+  padding: 0.5em 1em 0.5em 0;
   background: none;
   border: none;
   cursor: pointer;
@@ -137,7 +141,7 @@ body {
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button::after {
   content: url("../images/icon-arrow-light.svg");
   position: absolute;
-  right: 2px;
+  right: 0px;
 }
 
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .dropdown-content {
@@ -148,5 +152,27 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header .nav .menu--wrap .menu--container .login--wrap .login__li + .login__li {
+  margin-left: 2em;
+}
+
+.header .nav .menu--wrap .menu--container .login--wrap .signup--btn {
+  background: white;
+  padding: 0.5em 1.75em;
+  border-radius: 999px;
+  color: #ff525d;
+  font-weight: 600;
+  text-align: center;
+  display: inline-block;
+  vertical-align: text-bottom;
+}
+
+.header .nav .menu--wrap .menu--container .login--wrap .login--btn {
+  color: white;
 }
 /*# sourceMappingURL=styles.css.map */
