--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ a {
 
 button {
   font-family: "Ubuntu", Arial, Helvetica, sans-serif;
-  font-size: 1rem;
+  font-size: 1.125rem;
 }
 
 h1,
@@ -75,7 +75,7 @@ body {
 }
 
 .header .nav {
-  max-width: 1100px;
+  max-width: 1125px;
   width: 100%;
 }
 
@@ -124,6 +124,11 @@ body {
   position: relative;
 }
 
+.header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li:hover .menu-button {
+  text-decoration: underline;
+  color: white;
+}
+
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li + .menu__li {
   margin-left: 2em;
 }
@@ -134,7 +139,7 @@ body {
   border: none;
   cursor: pointer;
   text-align: start;
-  color: white;
+  color: rgba(255, 255, 255, 0.712);
   font-weight: 500;
 }
 
@@ -142,10 +147,56 @@ body {
   content: url("../images/icon-arrow-light.svg");
   position: absolute;
   right: 0px;
+  bottom: 0.625rem;
+}
+
+.header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button.rotate::after {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  bottom: 0.375rem;
+}
+
+.header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button.active::before {
+  display: block;
+}
+
+.header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button.active {
+  text-decoration: underline;
+  color: white;
 }
 
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .dropdown-content {
   display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  min-width: 9.375rem;
+  position: absolute;
+  top: 2.8125rem;
+  left: -1.5rem;
+  background: white;
+  padding: 0.5em 0 1.5em 0.5em;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.212);
+          box-shadow: 0 5px 15px rgba(0, 0, 0, 0.212);
+}
+
+.header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .dropdown-content .dropdown__link {
+  padding: 1em 1em 0 1em;
+  color: black;
+  font-weight: 500;
+}
+
+.header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .dropdown-content .dropdown__link:hover {
+  font-weight: 600;
+}
+
+.header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .dropdown-content.display {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .header .nav .menu--wrap .menu--container .login--wrap {
