working on making nav + hero section responsive on mobile
changed max-width variable to rem instead of px and tweaked the background image for mobile sizes

--- a/styles/partials/utils/_variables.scss
+++ b/styles/partials/utils/_variables.scss
@@ -1,9 +1,10 @@
 $font-stack-Overpass: "Overpass", Arial, Helvetica, sans-serif;
 $font-stack-Ubuntu: "Ubuntu", Arial, Helvetica, sans-serif;
 
-$max-width: 1125px;
+$max-width: 70rem;
 $border-radius: 0 0 0 75px;
 $box-shadow: 0 5px 15px rgba(0, 0, 0, 0.212);
+$padding: 2em;
 
 $font-weight: (
     light: 300,
