--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ html {
   margin: 0;
   padding: 0;
   height: 100%;
+  font-size: 100%;
 }
 
 *,
@@ -90,7 +91,7 @@ body {
   background-image: linear-gradient(to right, rgba(255, 143, 112, 0.9), rgba(255, 61, 84, 0.9)), url("../images/bg-pattern-intro.svg");
   background-repeat: no-repeat;
   background-position: center, 25% 51%;
-  height: 525px;
+  height: 34.375rem;
   border-radius: 0 0 0 75px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -99,6 +100,16 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+@media only screen and (max-width: 850px) {
+  .intro--container {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 143, 112, 0.9)), to(rgba(255, 61, 84, 0.9))), url("../images/bg-pattern-intro.svg");
+    background-image: linear-gradient(to right, rgba(255, 143, 112, 0.9), rgba(255, 61, 84, 0.9)), url("../images/bg-pattern-intro.svg");
+    background-size: cover, 350%;
+    background-repeat: no-repeat;
+    background-position: center, 35% 35%;
+  }
 }
 
 .header {
@@ -112,7 +123,7 @@ body {
 }
 
 .header .nav {
-  max-width: 1125px;
+  max-width: 70rem;
   width: 100%;
 }
 
@@ -123,6 +134,16 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .header .nav .menu--wrap .logo {
@@ -136,8 +157,13 @@ body {
   border: none;
 }
 
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap #hamburger--btn {
+    display: block;
+  }
+}
+
 .header .nav .menu--wrap .menu--container {
-  margin-left: 2.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -150,10 +176,17 @@ body {
           align-items: center;
 }
 
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap .menu--container {
+    display: none;
+  }
+}
+
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-left: 3.4375rem;
 }
 
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li {
@@ -261,6 +294,7 @@ body {
 
 .call-to-action--container {
   height: 100%;
+  padding: 0 2em;
 }
 
 .call-to-action--container .call-to-action--wrap {
@@ -280,16 +314,24 @@ body {
           flex-direction: column;
 }
 
+@media only screen and (max-width: 850px) {
+  .call-to-action--container .call-to-action--wrap {
+    margin-top: 3.5em;
+  }
+}
+
 .call-to-action--container .call-to-action--wrap .cta__h1 {
   color: white;
-  font-size: 3.75rem;
+  font-size: clamp(2.1875rem, 5vw, 3.75rem);
+  text-align: center;
 }
 
 .call-to-action--container .call-to-action--wrap .cta__p {
   margin-top: 1em;
   color: rgba(255, 255, 255, 0.76);
   font-weight: 500;
-  font-size: 1.25rem;
+  font-size: clamp(1.125rem, 2vw, 1.25rem);
+  text-align: center;
 }
 
 .call-to-action--container .call-to-action--wrap .cta__link--wrap {
