--- a/styles/partials/utils/_mixins.scss
+++ b/styles/partials/utils/_mixins.scss
@@ -6,9 +6,22 @@
         ),
         url("../images/bg-pattern-intro.svg");
 
-    // background-size: cover;
+    // background-size: cover, 300%;
     background-repeat: no-repeat;
     background-position: center, 25% 51%;
+}
+
+@mixin background-Gradient-Red-Mobile {
+    background-image: linear-gradient(
+            to right,
+            hsla(13, 100%, 72%, 0.9),
+            hsla(353, 100%, 62%, 0.9)
+        ),
+        url("../images/bg-pattern-intro.svg");
+
+    background-size: cover, 350%;
+    background-repeat: no-repeat;
+    background-position: center, 35% 35%;
 }
 
 @mixin background-Gradient-DarkBlue {
@@ -21,4 +34,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: $direction;
+}
+
+@mixin mobileSize {
+    @media only screen and (max-width: 850px) {
+        @content;
+    }
 }
