--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ body {
 }
 
 .header {
-  padding: 3em 2em 2em 2em;
+  padding: 3em 1.5em 1.5em 1.5em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -134,6 +134,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
 }
 
 @media only screen and (max-width: 850px) {
@@ -155,6 +156,7 @@ body {
   display: none;
   background: none;
   border: none;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 850px) {
@@ -179,6 +181,22 @@ body {
 @media only screen and (max-width: 850px) {
   .header .nav .menu--wrap .menu--container {
     display: none;
+    padding: 0.5em 1.5em 1.5em 1.5em;
+    -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.212);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.212);
+  }
+  .header .nav .menu--wrap .menu--container.display {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background: white;
+    border-radius: 5px;
+    position: absolute;
+    top: 4.6875rem;
   }
 }
 
@@ -189,11 +207,36 @@ body {
   margin-left: 3.4375rem;
 }
 
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap .menu--container .menu-buttons--wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: 0;
+  }
+}
+
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   position: relative;
+}
+
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li:hover .menu-button {
@@ -203,6 +246,12 @@ body {
 
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li + .menu__li {
   margin-left: 2em;
+}
+
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li + .menu__li {
+    margin-left: 0;
+  }
 }
 
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button {
@@ -215,6 +264,16 @@ body {
   font-weight: 500;
 }
 
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button {
+    color: #1f3f5b;
+    padding: 1em 0;
+    text-align: center;
+    position: relative;
+    width: auto;
+  }
+}
+
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button::after {
   content: url("../images/icon-arrow-light.svg");
   position: absolute;
@@ -222,10 +281,24 @@ body {
   bottom: 0.625rem;
 }
 
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button::after {
+    content: url("../images/icon-arrow-dark.svg");
+    bottom: 1.1875rem;
+    right: -0.9375rem;
+  }
+}
+
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button.rotate::after {
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
-  bottom: 0.375rem;
+  bottom: 0.3125rem;
+}
+
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button.rotate::after {
+    bottom: 0.75rem;
+  }
 }
 
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button.active::before {
@@ -235,6 +308,13 @@ body {
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button.active {
   text-decoration: underline;
   color: white;
+}
+
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .menu-button.active {
+    color: rgba(31, 63, 91, 0.644);
+    text-decoration: none;
+  }
 }
 
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .dropdown-content {
@@ -255,10 +335,38 @@ body {
           box-shadow: 0 5px 15px rgba(0, 0, 0, 0.212);
 }
 
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .dropdown-content {
+    background: #f0f0f0;
+    position: unset;
+    text-align: center;
+    padding: 1.5em;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    min-width: 17.1875rem;
+    width: 100%;
+    -webkit-box-shadow: unset;
+            box-shadow: unset;
+  }
+}
+
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .dropdown-content .dropdown__link {
   padding: 1em 1em 0 1em;
   color: black;
   font-weight: 500;
+}
+
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .dropdown-content .dropdown__link {
+    padding: 0 1em;
+    font-weight: 600;
+    color: rgba(31, 63, 91, 0.644);
+  }
+  .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .dropdown-content .dropdown__link + .dropdown__link {
+    padding: 1em 1em 0 1em;
+  }
 }
 
 .header .nav .menu--wrap .menu--container .menu-buttons--wrap .menu__li .dropdown-content .dropdown__link:hover {
@@ -280,21 +388,58 @@ body {
           align-items: center;
 }
 
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap .menu--container .login--wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border-top: solid #e9e9e9 2px;
+    width: 100%;
+    padding-top: 1em;
+    margin-top: 1em;
+  }
+}
+
 .header .nav .menu--wrap .menu--container .login--wrap .login__li + .login__li {
   margin-left: 2em;
+}
+
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap .menu--container .login--wrap .login__li + .login__li {
+    margin-left: 0;
+  }
 }
 
 .header .nav .menu--wrap .menu--container .login--wrap .signup--btn {
   padding: 0.5em 1.75em;
 }
 
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap .menu--container .login--wrap .signup--btn {
+    background: -webkit-gradient(linear, left top, right top, from(#ff7a85), to(#ff525d));
+    background: linear-gradient(to right, #ff7a85, #ff525d);
+    color: white;
+    margin-top: 1em;
+  }
+}
+
 .header .nav .menu--wrap .menu--container .login--wrap .login--btn {
   color: white;
 }
 
+@media only screen and (max-width: 850px) {
+  .header .nav .menu--wrap .menu--container .login--wrap .login--btn {
+    color: #1f3f5b;
+  }
+}
+
 .call-to-action--container {
   height: 100%;
-  padding: 0 2em;
+  padding: 0 1.5em;
 }
 
 .call-to-action--container .call-to-action--wrap {
@@ -322,7 +467,7 @@ body {
 
 .call-to-action--container .call-to-action--wrap .cta__h1 {
   color: white;
-  font-size: clamp(2.1875rem, 5vw, 3.75rem);
+  font-size: clamp(2.3125rem, 5vw, 3.75rem);
   text-align: center;
 }
 
@@ -336,6 +481,9 @@ body {
 
 .call-to-action--container .call-to-action--wrap .cta__link--wrap {
   margin-top: 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .call-to-action--container .call-to-action--wrap .cta__link--wrap .start-btn {
