--- a/styles/sections/_header-and-CTA.scss
+++ b/styles/sections/_header-and-CTA.scss
@@ -12,7 +12,7 @@
 }
 
 .header {
-    padding: 3em 2em 2em 2em;
+    padding: 3em $padding $padding $padding;
     display: flex;
     justify-content: center;
 
@@ -23,6 +23,7 @@
         .menu--wrap {
             display: flex;
             align-items: center;
+            position: relative;
 
             @include mobileSize {
                 justify-content: space-between;
@@ -38,6 +39,7 @@
                 display: none;
                 background: none;
                 border: none;
+                cursor: pointer;
 
                 @include mobileSize {
                     display: block;
@@ -54,16 +56,38 @@
 
                 @include mobileSize {
                     display: none;
+                    padding: 0.5em $padding $padding $padding;
+                    box-shadow: $box-shadow;
+
+                    &.display {
+                        display: flex;
+                        flex-direction: column;
+                        background: white;
+                        border-radius: 5px;
+                        position: absolute;
+                        top: rem(75px);
+                    }
                 }
 
                 // this wrap holds the dropdown buttons only
                 .menu-buttons--wrap {
                     display: flex;
                     margin-left: rem(55px);
+
+                    @include mobileSize {
+                        flex-direction: column;
+                        margin-left: 0;
+                    }
                     // this li holds the button and the dropdown-content
                     .menu__li {
                         display: flex;
                         position: relative;
+
+                        @include mobileSize {
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                        }
 
                         &:hover .menu-button {
                             text-decoration: underline;
@@ -72,6 +96,10 @@
 
                         & + .menu__li {
                             margin-left: 2em;
+
+                            @include mobileSize {
+                                margin-left: 0;
+                            }
                         }
 
                         .menu-button {
@@ -83,16 +111,34 @@
                             color: rgba(255, 255, 255, 0.712);
                             font-weight: 500;
 
+                            @include mobileSize {
+                                color: color(primary-very-dark-blue);
+                                padding: 1em 0;
+                                text-align: center;
+                                position: relative;
+                                width: auto;
+                            }
+
                             &::after {
                                 content: url("../images/icon-arrow-light.svg");
                                 position: absolute;
                                 right: 0px;
                                 bottom: rem(10px);
+
+                                @include mobileSize {
+                                    content: url("../images/icon-arrow-dark.svg");
+                                    bottom: rem(19px);
+                                    right: rem(-15px);
+                                }
                             }
 
                             &.rotate::after {
                                 transform: rotate(180deg);
-                                bottom: rem(6px);
+                                bottom: rem(5px);
+
+                                @include mobileSize {
+                                    bottom: rem(12px);
+                                }
                             }
 
                             &.active::before {
@@ -102,6 +148,11 @@
                             &.active {
                                 text-decoration: underline;
                                 color: color(neutral-white);
+
+                                @include mobileSize {
+                                    color: hsla(208, 49%, 24%, 0.644);
+                                    text-decoration: none;
+                                }
                             }
                         }
 
@@ -118,10 +169,31 @@
                             border-radius: 5px;
                             box-shadow: $box-shadow;
 
+                            @include mobileSize {
+                                background: rgb(240, 240, 240);
+                                position: unset;
+                                text-align: center;
+                                padding: $padding;
+                                flex-direction: column;
+                                min-width: rem(275px);
+                                width: 100%;
+                                box-shadow: unset;
+                            }
+
                             .dropdown__link {
                                 padding: 1em 1em 0 1em;
                                 color: black;
                                 font-weight: fontWeight(medium);
+
+                                @include mobileSize {
+                                    padding: 0 1em;
+                                    font-weight: fontWeight(semi-bold);
+                                    color: hsla(208, 49%, 24%, 0.644);
+
+                                    & + .dropdown__link {
+                                        padding: 1em 1em 0 1em;
+                                    }
+                                }
 
                                 &:hover {
                                     font-weight: fontWeight(semi-bold);
@@ -140,18 +212,46 @@
                     display: flex;
                     align-items: center;
 
+                    @include mobileSize {
+                        flex-direction: column;
+                        justify-content: center;
+                        border-top: solid rgb(233, 233, 233) 2px;
+                        width: 100%;
+                        padding-top: 1em;
+                        margin-top: 1em;
+                    }
+
                     .login__li {
                         & + .login__li {
                             margin-left: 2em;
+
+                            @include mobileSize {
+                                margin-left: 0;
+                            }
                         }
                     }
                     .signup--btn {
                         // vertical-align: text-bottom;
                         padding: 0.5em 1.75em;
+
+                        @include mobileSize {
+                            background: linear-gradient(
+                                to right,
+                                hsl(355, 100%, 74%),
+                                hsl(356, 100%, 66%)
+                            );
+
+                            color: color(neutral-white);
+                            margin-top: 1em;
+                        }
                     }
 
                     .login--btn {
                         color: color(neutral-white);
+
+                        @include mobileSize {
+                            color: color(primary-very-dark-blue);
+                        }
                     }
                 }
             }
@@ -172,7 +272,7 @@
         }
         .cta__h1 {
             color: color(neutral-white);
-            font-size: clamp(rem(35px), 5vw, rem(60px));
+            font-size: clamp(rem(37px), 5vw, rem(60px));
             text-align: center;
         }
 
@@ -186,6 +286,7 @@
 
         .cta__link--wrap {
             margin-top: 2em;
+            display: flex;
 
             .start-btn {
                 padding: 0.5em 1em;
