adjusted the padding for the header on mobile and raised the mobile nav menu slightly

--- a/styles/sections/_header-and-CTA.scss
+++ b/styles/sections/_header-and-CTA.scss
@@ -16,6 +16,10 @@
     display: flex;
     justify-content: center;
 
+    @include mobileSize {
+        padding: $padding;
+    }
+
     .nav {
         max-width: $max-width;
         width: 100%;
@@ -65,7 +69,7 @@
                         background: white;
                         border-radius: 5px;
                         position: absolute;
-                        top: rem(75px);
+                        top: rem(65px);
                     }
                 }
 
