--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,12 @@ body {
           justify-content: center;
 }
 
+@media only screen and (max-width: 850px) {
+  .header {
+    padding: 1.5em;
+  }
+}
+
 .header .nav {
   max-width: 70rem;
   width: 100%;
@@ -196,7 +202,7 @@ body {
     background: white;
     border-radius: 5px;
     position: absolute;
-    top: 4.6875rem;
+    top: 4.0625rem;
   }
 }
 
