--- a/styles/partials/_boilerplate.scss
+++ b/styles/partials/_boilerplate.scss
@@ -12,6 +12,7 @@ html {
     box-sizing: inherit;
     margin: 0;
     padding: 0;
+    // outline: solid red 1px;
 }
 img {
     display: block;
@@ -22,11 +23,15 @@ li {
 }
 
 ul,
-p,
 h1,
 h2,
 h3 {
     margin: 0;
+}
+
+p {
+    margin: 0;
+    line-height: 1.8;
 }
 
 a {
